added header in main page

--- a/src/main/resources/static/templates/client/main.html
+++ b/src/main/resources/static/templates/client/main.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Main page</title>
     <meta charset="UTF-8">
-    <title>Titlebred</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-
+<div class = "header">
+    <img width="220px" height="210px" src="logo.svg" alt="logo">
+    <form class="search-form">
+        <img width="36px" height="36px"  src="magnifier.svg" alt="magnifier">
+        <input type="search" placeholder="Search" name="query">
+    </form>
+    <button class="all-recipes">All recipes</button>
+    <button class="random">Random</button>
+    <img width="70px" height="60px"  src="heart.svg" alt="heart">
+    <img width="60px" height="60px"  src="user.svg" alt="user">
+    <img width="60px" height="60px"  src="home.svg" alt="home">
+</div>
 </body>
 </html>
