--- a/src/main/resources/static/templates/client/main.html
+++ b/src/main/resources/static/templates/client/main.html
@@ -13,8 +13,8 @@
         <img width="36px" height="36px"  src="magnifier.svg" alt="magnifier">
         <input type="search" placeholder="Search" name="query">
     </form>
-    <button class="all-recipes">All recipes</button>
-    <button class="random">Random</button>
+    <a href="allRecipes.html" class="button-style">All recipes</a>
+    <a href="randomRecipe.html" class="button-style">Random</a>
     <img width="70px" height="60px"  src="heart.svg" alt="heart">
     <img width="60px" height="60px"  src="user.svg" alt="user">
     <img width="60px" height="60px"  src="home.svg" alt="home">
