--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -34,22 +34,18 @@ body {
     outline: none;
 }
 
-.all-recipes, .random {
+.button-style {
     display: flex;
-}
-
-.all-recipes, .random {
     background-color: #3E5902;
-    border: none;
     height: 62px;
     width: 124.11px;
     border-radius: 30px;
     color: white;
-    text-align: center;
-    display: flex;
     justify-content: center;
     align-items: center;
     font-family: 'Frank Ruhl Libre', serif;
     font-size: 24px;
+    text-decoration: none;
 }
+
 
