--- a/src/main/resources/templates/user/recipe.html
+++ b/src/main/resources/templates/user/recipe.html
@@ -7,24 +7,26 @@
 <body>
 <p th:text="${recipe.getTitle()}"></p>
 <p th:text="${recipe.getDescription()}"></p>
-<a th:text="${recipe.getCategory().getTitle()}" th:href="@{/allRecipe?category={category}(category=${recipe.getCategory().getTitle()})}"></a>
+<a th:href="@{/allRecipe?category={category}(category=${recipe.getCategory().getTitle()})}"
+   th:text="${recipe.getCategory().getTitle()}"></a>
 <p th:text="${recipe.getAverageMark()}"></p>
 <table th:each="devices: ${recipe.getRecipeDevices()}">
     <tr>
-        <td th:text = "${devices.cookingDevice.getName()}"></td>
+        <td th:text="${devices.cookingDevice.getName()}"></td>
     </tr>
 </table>
 <table th:each="ingedients: ${recipe.getRecipeIngredients()}">
     <tr>
-       <td> <a th:text = "${ingedients.ingredient.getName()}" th:href="@{/allRecipe?ingedient={ingredient}(ingredient=${ingedients.ingredient.getName()})}"></a>
-       </td>
-        <td th:text = "${ingedients.getAmountOfIngredient()}">
+        <td><a th:href="@{/allRecipe?ingedient={ingredient}(ingredient=${ingedients.ingredient.getName()})}"
+               th:text="${ingedients.ingredient.getName()}"></a>
+        </td>
+        <td th:text="${ingedients.getAmountOfIngredient()}">
         </td>
     </tr>
 </table>
-<table th:each = "comment : ${recipe.getComments()}">
-    <tr th:text = "${comment.getUser().getId()}"></tr>
-    <tr th:text = "${comment.getText()}"></tr>
+<table th:each="comment : ${recipe.getComments()}">
+    <tr th:text="${comment.getUser().getId()}"></tr>
+    <tr th:text="${comment.getText()}"></tr>
 </table>
 </body>
 </html>
