--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -4,7 +4,7 @@
     <title>Main page</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../../static/css/main.css">
 </head>
 <body>
 <div class = "header">
@@ -13,7 +13,7 @@
         <img width="36px" height="36px"  src="magnifier.svg" alt="magnifier">
         <input type="search" placeholder="Search" name="query">
     </form>
-    <a th:href="@{/allRecipe}" href="allRecipe.html" class="button-style">All recipes</a>
+    <a th:href="@{/allRecipes}" href="allRecipes.html" class="button-style">All recipes</a>
     <a href="randomRecipe.html" class="button-style">Random</a>
     <div class="heart">
         <svg width="70" height="60" viewBox="0 0 70 60" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
