--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -29,7 +29,7 @@ body {
     border-radius: 30px;
 }
 
-.search-form input {
+.search-form input, .inner-window input {
     height: 6.19vh;
     width: 41.67vw;
     flex: 1;
@@ -376,19 +376,65 @@ ul hr {
     color: #F2E3B3;
 }
 
-#feedback-input {
+#overlay {
+    position: fixed;
+    display: none;
     width: 100%;
-    height: 100px;
-    border: none;
-    padding: 10px;
-    box-sizing: border-box;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 10;
+}
+
+.window {
+    position: fixed;
+    display: none;
+    bottom: 100px;
+    left: 5%;
+    width: 1140px;
+    height: 465px;
+    background: #F2E3B3;
+    padding: 20px;
+    z-index: 11;
+    border-radius: 60px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+.inner-window {
+    background: #FBEFC7;
+    position: absolute;
+    width: 1060px;
+    height: 345px;
+    left: 41px;
+    top: 38px;
+    padding-left: 10px;
+    border-radius: 30px;
+    z-index: 13;
 }
 
 #send-button {
-    background-color: green;
-    color: white;
+    position: absolute;
+    right: 90px;
+    width: 173px;
+    height: 46px;
+    background-color: #3E5902;
+    border-radius: 30px;
+    text-align: center;
+    font-family: 'Frank Ruhl Libre';
+    font-size: 1.25vh;
+    font-size: 1.25vw;
+    color: #FBEFC7;
     border: none;
-    padding: 10px;
+    top: 400px;
+    bottom: 16px;
+    z-index: 15;
+}
+
+#send-button:hover {
+    background-color: #FBEFC7;
+    color: #3E5902;
+    border: 5px solid #3E5902;
 }
 
 .circle-container {
