--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -152,6 +152,12 @@ ul hr {
     border-radius: 50px;
 }
 
+.board{
+    width: 14.584vw; /*280*/
+    height:75.926vh; /*820*/
+    margin-right: 2.344vw;
+}
+
 .substance{
     width: 2.65625vw;
     height:5.5556vh;
@@ -166,11 +172,41 @@ ul hr {
     width: 2.0833vw;
     height:4.167vh;
 }
+.pastryI{
+    width: 2.34375vw;
+    height: 3.24075vh;
+}
+
+.dessertI{
+    width: 2.34375vw;
+    height: 3.24075vh;
+}
+
+.smoothieI{
+    width: 2.34375vw;
+    height: 4.1667vh;
+}
+.snackI{
+    width: 2.34375vw;/*45*/
+    height: 2.7778vh;/*30*/
+}
+
+.fish{
+    width: 2.34375vw;
+    height: 3.24075vh; /*35*/
+}
+
+.sauceI{
+    width: 1.927084vw;
+    height: 4.3518vh; /*37*/
+}
 
 .bean {
     position: absolute;
-    left: 118px;
-    bottom: 30px;
+    width: 2vw;/*35*/
+    height: 4.8vh;/*45*/
+    left: 6.3vw;
+    top: 69vh;
 }
 
 .cheesecake {
@@ -227,7 +263,7 @@ ul hr {
     position: absolute;
     width: 13.17vw;
     height: 6.0185185185vh;
-    top: 84.20vh;
+    top: 84.5vh;
     margin-right: 2.344vw;
     border-radius: 0px 0px 50px 50px;
     background: #F2E3B3;
@@ -258,16 +294,19 @@ ul hr {
     left: 48.9175vw;
 }
 
-.salad:hover .seafoodSalad, .salad:hover .rectangle-left-3 {
-    border: 5px solid #733506;
+.salad:hover .seafoodSalad {
+    border: 0.2em solid #733506;
 }
 
+.salad:hover .rectangle-left-3{
+    border: 0.07em solid #733506;
+}
 
 .rectangleFD {
     position: absolute;
-    height: 6.0185185185vh;
+    height: 7vh;
     width: 43.69vw;
-    top: 44.815vh;
+    top: 43vh;
     margin-right: 2.344vw;
     border-radius: 0px 0px 50px 50px;
     background: #F2E3B3;
@@ -289,9 +328,9 @@ ul hr {
 
 .rectangleMD {
     position: absolute;
-    height: 6.0185185185vh;
+    height: 7vh;
     width: 31.25vw;
-    top: 84.70vh;
+    top: 83.70vh;
     margin-right: 2.344vw;
     border-radius: 0px 0px 50px 50px;
     background: #F2E3B3;
