Only the board remains

--- a/src/main/resources/templates/user/main.html
+++ b/src/main/resources/templates/user/main.html
@@ -29,12 +29,7 @@
     </div>
 
     <div class="user">
-        <svg fill="none" height="60.000000" viewBox="0 0 60 60" width="60.000000" xmlns="http://www.w3.org/2000/svg"
-        >
-            <path d="M30 7.06C34.34 7.06 37.87 10.56 37.87 14.87C37.87 19.19 34.34 22.68 30 22.68C25.65 22.68 22.12 19.19 22.12 14.87C22.12 10.56 25.65 7.06 30 7.06ZM30 40.53C41.13 40.53 52.87 45.96 52.87 48.34L52.87 52.43L7.12 52.43L7.12 48.34C7.12 45.96 18.86 40.53 30 40.53ZM30 0C21.71 0 15 6.65 15 14.87C15 23.09 21.71 29.75 30 29.75C38.28 29.75 45 23.09 45 14.87C45 6.65 38.28 0 30 0ZM30 33.47C19.98 33.47 0 38.45 0 48.34L0 55.78C0 57.83 1.68 59.5 3.75 59.5L56.25 59.5C58.31 59.5 60 57.83 60 55.78L60 48.34C60 38.45 40.01 33.47 30 33.47Z"
-                  fill="#733506"
-                  fill-opacity="1.000000" fill-rule="nonzero" id="Vector"/>
-        </svg>
+        <img th:src="@{images/user.svg}" src="../../static/images/user.svg" alt = "user" class = "user1">
     </div>
 
     <img th:src="@{images/home.svg}" src="../../static/images/home.svg" alt = "home" class = "home">
@@ -44,10 +39,9 @@
 <div class="container">
     <div class="menu">
         <img alt="board" class="board" src="../../static/images/CuttingBoard.svg" >
-
         <div class="ul">
-            <h1 class="h1">Categories</h1>
             <ul>
+                <h1 class="h1">Categories</h1>
                 <li><img alt="substance" class="substance" src="../../static/images/Soup.svg" >
                     First dishes</li>
                 <hr>
