--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -62,6 +62,11 @@ body {
     text-decoration: none;
 }
 
+.user1{
+    width: 3.6458vw;
+    height: 5.555vh;
+}
+
 .heart, .user {
     display: flex;
     justify-content: center;
@@ -69,11 +74,11 @@ body {
     transition: all 0.2s;
 }
 
-.heart:hover, .user:hover {
+.heart:hover, .user1:hover {
     border-radius: 50%;
     background-color: #733506;
-    width: 100px;
-    height: 100px;
+    width: 5.2083vw;
+    height: 9.2592vh;
 }
 
 .heart:hover path, .user:hover path {
@@ -98,54 +103,66 @@ body {
     justify-content: flex-start;
     margin-left: 1.04167vw;
     margin-top: 1.852vh;
-    margin-right: 1.04167vw;
+    margin-right: 1.7vw;
 }
 
 .h1 {
     font-family: 'Frank Ruhl Libre', serif;
-    font-size: 42px;
+    font-size: 2.1875vw; /*42*/
+    font-size: 3.8889vh;
     color: #733506;
     position: absolute;
-    transform: translateY(-35px);
-    left: 38px;
+    left: 1.979167vw;
+    bottom: 0.2605vh;
+    margin-bottom: 44vh;
 }
 
 .ul {
     position: absolute;
     top: 13.889vh;
-    height: 46.2963vh;
+    height: 48vh;
     font-family: 'Frank Ruhl Libre', serif;
-    font-size: 32px;
+    font-size: 1.66667vw;
+    font-size: 2.963vh;
     overflow-y: auto;
     overflow-x: hidden;
-    padding-left: 5px;
+    padding-left: 0.2605vw;
+    margin-top: 1vh;
+
 }
 
 ul {
-    padding-left: 5px;
-    margin-left: 10px;
+    padding-left: 0.2605vw;
+    margin-left: 0.521vw;
 }
 
 ul li {
+
     list-style: none;
-    padding-left: 5px;
+    padding-left: 0.2605vw;
+    margin-left: 0.4vw;
+    margin-right: 0.7vw;
 }
 
 ul hr {
-    border: 2px solid black;
-    margin: 10px 0;
+    border: 0.104167vw solid black;
+    margin: 0.520834vw 0;
+    margin-left: 0.5vw;
+    margin-right: 0.6vw;
 }
 
 
 ::-webkit-scrollbar {
-    width: 15px;
+    width: 0.78125vw;
+    margin-left: 5vw;
 }
 
 ::-webkit-scrollbar-track {
-    margin-top: 30px;
-    border: 1px solid black;
+    margin-top: 2.7778vh;
+    border: 0.0520834vw solid black;
     border-radius: 50px;
     background: #F2E3B3;
+    margin-left: 0.5vw;
 }
 
 ::-webkit-scrollbar-thumb {
@@ -301,13 +318,10 @@ ul hr {
     left: 48.9175vw;
 }
 
-.salad:hover .seafoodSalad {
-    border: 0.2em solid #733506;
+.salad:hover .seafoodSalad, .salad:hover .rectangle-left-3 {
+    border: 5px solid #733506;
 }
 
-.salad:hover .rectangle-left-3{
-    border: 0.07em solid #733506;
-}
 
 .rectangleFD {
     position: absolute;
